--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ font-size:24px;
 cursor:pointer;
 }
 
-/* MAIN (تمكين التمرير) */
+/* MAIN */
 .main{
 flex:1;
 overflow-y:auto;
@@ -257,7 +257,21 @@ SYP Smart هو موقع ذكي ومبسّط لتحويل العملة السور
 مع اعتماد تصميم عصري وهوية بصرية سورية أنيقة.
 </p>
 
-<h3>التواصل</h3>
+<hr style="margin:20px 0">
+
+<button onclick="openCustomerPage()" style="
+background:#0f7b4f;
+color:white;
+padding:14px;
+border:none;
+border-radius:18px;
+font-size:15px;
+width:100%;
+cursor:pointer">
+🧾 حساب الزبون
+</button>
+
+<h3 style="margin-top:20px">التواصل</h3>
 <p>📞 +963 992 320 306</p>
 </div>
 
@@ -384,6 +398,10 @@ renderHistory();
 
 function toggleMenu(){
 document.getElementById("sidebar").classList.toggle("active");
+}
+
+function openCustomerPage(){
+window.location.href="customer.html";
 }
 
 renderHistory();
